--- a/.github/workflows/cloud-run-action-cd.yml
+++ b/.github/workflows/cloud-run-action-cd.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - name: Setup GCP Service Account
-        uses: google-github-actions/setup-gcloud@v0
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@v2
         with:
           version: 'latest'
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
