--- a/.github/workflows/cloud-run-action-cd.yml
+++ b/.github/workflows/cloud-run-action-cd.yml
@@ -13,7 +13,7 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json:  ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
 
       - name: Checkout
         uses: actions/checkout@v2
