--- a/.github/workflows/cloud-run-action-cd.yml
+++ b/.github/workflows/cloud-run-action-cd.yml
@@ -10,14 +10,14 @@ jobs:
     name: Cloud Run Deployment
     runs-on: ubuntu-latest
     steps:
-      - id: 'auth'
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Auth
         uses: 'google-github-actions/auth@v2'
         with:
           token_format: 'access_token'
           credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
-
-      - name: Checkout
-        uses: actions/checkout@v2
 
       - name: 'Set up Cloud SDK'
         uses: google-github-actions/setup-gcloud@v2
