--- a/.github/workflows/cloud-run-action-cd.yml
+++ b/.github/workflows/cloud-run-action-cd.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Deploy to CloudRun
 
 on:
   push:
@@ -29,17 +29,17 @@ jobs:
       
       - name: Build
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/simple_blockchain:latest .
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/simple-blockchain:latest .
 
       - name: Push
         run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/simple_blockchain:latest
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/simple-blockchain:latest
 
       - name: Deploy
         run: |
-          gcloud run deploy simple_blockchain \
+          gcloud run deploy simple-blockchain \
           --region asia-east1 \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/simple_blockchain \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/simple-blockchain \
           --platform managed \
           --allow-unauthenticated \
           --project ${{ secrets.GCP_PROJECT_ID }}
